// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Cover matches the snapshot 1`] = `
.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c11 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c14 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c17 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c13 {
  width: 32px;
  height: 32px;
}

.c8 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 12px;
}

.c15 {
  margin-right: 20px;
}

.c15 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  position: relative;
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 45px;
  line-height: 1.2em;
}

.c2 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
}

.c4 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
}

.c7 {
  width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  box-sizing: border-box;
  padding-bottom: 60px;
  z-index: 1;
}

.c6 .c12 {
  height: 60px;
  width: 44px;
  margin-right: 15px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

.c0 .c1,
.c0 .c3,
.c0 .c5 {
  position: absolute;
  width: 100%;
  height: 100%;
}

.c18 {
  position: relative;
  margin-top: 30px;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (min-width:0em) {
  .c11 {
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c11 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c14 {
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c14 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c17 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c17 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
    display: block;
  }
}

@media (max-width:48em) {
  .c10 {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

@media (max-width:48em) {
  .c6 {
    padding-bottom: 40px;
  }
}

@media (max-width:48em) {
  .c18 {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c3 c4"
  />
  <div
    className="c5 c6"
  >
    <div
      className="c7 c8 c9"
    >
      <div
        className="c10 c11"
        onClick={[Function]}
      >
        <svg
          className="c12 c13"
          version="1.1"
          viewBox="0 0 40 56"
          x="0px"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <polygon
              fill="white"
              points="0 0 0 56 39.3600006 28"
            />
          </g>
        </svg>
      </div>
      <div
        className="c10 c14"
      >
        <div>
          <div
            className="c9"
          >
            <div
              className="c15 KtFsv hjZErb"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="14px"
            >
              Future of Art
            </div>
            <div
              className="KtFsv hjZErb"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="14px"
            >
              02:28
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c16"
            >
              Trevor Paglan
            </span>
          </div>
        </div>
      </div>
      <div
        className="c10 c17"
      >
        <div
          className="c18"
        >
          The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video Cover matches the snapshot with edit props 1`] = `
.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c11 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c14 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c17 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c13 {
  width: 32px;
  height: 32px;
}

.c8 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 12px;
}

.c15 {
  margin-right: 20px;
}

.c15 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  position: relative;
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 45px;
  line-height: 1.2em;
}

.c2 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
}

.c4 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
}

.c7 {
  width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  box-sizing: border-box;
  padding-bottom: 60px;
  z-index: 1;
}

.c6 .c12 {
  height: 60px;
  width: 44px;
  margin-right: 15px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

.c0 .c1,
.c0 .c3,
.c0 .c5 {
  position: absolute;
  width: 100%;
  height: 100%;
}

.c18 {
  position: relative;
  margin-top: 30px;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (min-width:0em) {
  .c11 {
    -webkit-flex-basis: 16.666666666666668%;
    -ms-flex-preferred-size: 16.666666666666668%;
    flex-basis: 16.666666666666668%;
    max-width: 16.666666666666668%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c11 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c14 {
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c14 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c17 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c17 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
    display: block;
  }
}

@media (max-width:48em) {
  .c10 {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

@media (max-width:48em) {
  .c6 {
    padding-bottom: 40px;
  }
}

@media (max-width:48em) {
  .c18 {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c3 c4"
  />
  <div
    className="c5 c6"
  >
    <div
      className="c7 c8 c9"
    >
      <div
        className="c10 c11"
        onClick={[Function]}
      >
        <svg
          className="c12 c13"
          version="1.1"
          viewBox="0 0 40 56"
          x="0px"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <polygon
              fill="white"
              points="0 0 0 56 39.3600006 28"
            />
          </g>
        </svg>
      </div>
      <div
        className="c10 c14"
      >
        <div>
          <div
            className="c9"
          >
            <div
              className="c15 KtFsv hjZErb"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="14px"
            >
              Future of Art
            </div>
            <div
              className="KtFsv hjZErb"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="14px"
            >
              02:28
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c16"
            >
              <div>
                Child 
                title
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        className="c10 c17"
      >
        <div
          className="c18"
        >
          <div>
            Child 
            description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
